--- a/style.css
+++ b/style.css
@@ -420,16 +420,19 @@ span {
   gap: 2rem;
 }
 
-.services-container .services-box {
+.services-box {
+  height:400px;
+  width: 200px;
+  cursor: pointer;
   flex: 1 1 30rem;
-  /* background: var(--second-color); */
+  background: var(--second-color);
   padding: 3rem 2rem 4rem;
   border-radius: 2rem;
   text-align: center;
   border: 0.2rem solid var(--bg-color);
   transition: 0.5s ease;
 }
-.services-container .services-box:hover {
+ .services-box:hover {
   border-color: var(--main-color);
   transform: scale(1.03);
 }
