--- a/style.css
+++ b/style.css
@@ -101,8 +101,9 @@ section {
     cursor: default;
  }
  .navbar a {
+  position: relative;
   font-size: 2rem;
-
+  left: 118px;
   color: var(--txt-color);
   margin-left: 4rem;
   transition: 0.3s;
@@ -788,7 +789,18 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width:1284px){
+  .navbar a {
+    display: inline;
+    font-size: 1.8vmax;
+    margin: 1.2rem 9.3rem 2.2rem;
+    margin-left: 0.8vmax;
+  }
+  .navbar a i {
+    margin-right: 4vmax;
+  }
+}
+@media (max-width: 1216px) {
   .logo {
     font-size: 2.6vmax;
   }
