--- a/style.css
+++ b/style.css
@@ -684,6 +684,8 @@ input[type="number"]::-webkit-inner-spin-button {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s;
+  display: block;
+  margin: auto;
 }
 
 .modal-content button[type="submit"]:hover {
@@ -706,7 +708,7 @@ input[type="number"]::-webkit-inner-spin-button {
 /* rating stars */
 .rating {
   width: 180px;
-  margin-left: 130px;
+  margin:auto;
   justify-content: center;
 }
 
