Modified Blog-card design

--- a/style.css
+++ b/style.css
@@ -419,7 +419,7 @@ span {
   flex-wrap: wrap;
   gap: 2rem;
 }
-
+/* 
 .services-container .services-box {
   flex: 1 1 30rem;
   background: var(--second-color);
@@ -445,7 +445,175 @@ span {
 .services-box p {
   font-size: 1.6rem;
   margin: 1rem 0 3rem;
+} */
+
+.services-container .services-box {
+  flex: 1 1 30rem;
+  background: var(--second-color);
+  padding: 3rem 2rem 4rem;
+  border-radius: 2rem;
+  text-align: center;
+  border: .2rem solid var(--bg-color);
+  transition: .5s ease;
+  position: relative;
+  overflow: hidden;
+
+
 }
+
+/* .services-container .services-box::before {
+  backdrop-filter: blur(10px); /* Apply blur effect to the background only */
+
+
+.services-container .services-box:hover {
+  border-color: var(--main-color);
+  transform: scale(1.02);
+  background-color: #064b10;
+
+}
+
+.services-box i {
+  font-size: 7rem;
+  color: var(--main-color);
+}
+
+.services-box h3 {
+  font-size: 2.6rem;
+  color:white;
+  text-shadow: #07421a;
+  text-shadow: 0 0 5px rgb(192, 223, 100);
+}
+
+.services-box h3:hover {
+  font-size: 2.6rem;
+  text-shadow: #07421a;
+}
+
+.services-box p {
+  font-size: 1.6rem;
+  margin: 1rem 0 3rem;
+}
+
+.with-blur-backdrop {
+  background-color: none;
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  padding: 10px ;
+  border-radius: 10px;
+  }
+
+/* Background images for cards */
+.services-container .services-box:nth-child(1) {
+  background-image: url('images/sow.jpeg');
+  background-size: cover;
+}
+.services-container .services-box:nth-child(1):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(2) {
+  background-image: url('images/irrigation.jpg');
+  background-size: cover;
+}
+.services-container .services-box:nth-child(2):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(3) {
+  background-image: url('/images/smart-farming-with-agriculture-iot.jpg');
+  background-size: cover;  
+}
+.services-container .services-box:nth-child(3):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(4) {
+  background-image: url('/images/sustain.jpg');
+  background-size: cover;  
+}
+.services-container .services-box:nth-child(4):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(5) {
+  background-image: url('/images/croprota.jpg');
+  background-size: cover;  
+}
+.services-container .services-box:nth-child(5):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(6) {
+  background-image: url('/images/seasonn.jpg');
+  /* filter: opacity(0.6); */
+  background-size: cover;  
+}
+.services-container .services-box:nth-child(6):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(7) {
+  background-image: url('/images/soil.jpg');
+  background-size: cover;  
+}
+.services-container .services-box:nth-child(7):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(8) {
+  background-image: url('/images/pest.jpg');
+  background-size: cover;  
+}
+.services-container .services-box:nth-child(8):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(9) {
+  background-image: url('/images/farmtech.png');
+  background-size: cover;  
+}
+.services-container .services-box:nth-child(9):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(10) {
+  background-image: url('/images/econ.jpg');
+  background-size: cover;  
+}
+.services-container .services-box:nth-child(10):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(11) {
+  background-image: url('/images/livestocks.jpg');
+  background-size: cover;  
+  filter: contrast(5px);
+}
+.services-container .services-box:nth-child(11):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
+.services-container .services-box:nth-child(12) {
+  background-image: url('/images/tourism.jpg');
+  background-size: cover;  
+  
+}
+.services-container .services-box:nth-child(12):hover {
+  background-image: none;
+  background-size: cover;  
+}
+
 .portfolio {
   background-color: var(--second-color);
 }
