Add the animated background in the about section

--- a/style.css
+++ b/style.css
@@ -381,39 +381,69 @@ span {
 .space {
   display: block;
 }
+
+.about-container {
+  margin-top: 2rem;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+}
+
+.about-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 99%;
+  object-fit: cover;
+  z-index: -1;
+}
+
 .about {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  background: var(--second-color);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 2rem;
+  text-align: center;
 }
 
-.about-img img {
-  width: 35vw;
-}
 .heading {
   text-align: center;
   font-size: 4.5rem;
 }
 
+.about-content {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 .about-content h2 {
+  margin: 2rem;
   text-align: left;
   line-height: 1.2;
+  width: 50%;
 }
+
 .about-content h3 {
+  margin: 2rem;
   font-size: 2.6rem;
 }
+
 .about-content p {
-  font-size: 1.6rem;
-  margin: 2rem 0 3rem;
+  margin: 2.2rem;
+  font-size: 2.5rem;
   text-align: justify;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  width: 50%;
 }
-
-
 .services h2 {
   margin-bottom: 5rem;
 }
