--- a/style.css
+++ b/style.css
@@ -381,17 +381,69 @@ span {
 .space {
   display: block;
 }
+
 .about {
+  position: relative;
+  height: 100vh; 
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 2rem;
-  background: var(--second-color);
+  justify-content: center;
+  overflow: hidden;
 }
 
-.about-img img {
+/*.about-img img {
   width: 35vw;
+}*/
+
+.video-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
+
+.video-wrapper video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.about-content {
+  color: white;
+  text-align: left;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  width: 80%;
+}
+
+.about-content .heading {
+  text-align: center;
+  font-size: 9rem;
+  margin-bottom: 30px;
+  margin-right: 30px;
+}
+
+.about-content .heading span {
+  font-size: 7rem; 
+}
+
 .heading {
   text-align: center;
   font-size: 4.5rem;
@@ -405,14 +457,65 @@ span {
   font-size: 2.6rem;
 }
 .about-content p {
-  font-size: 1.6rem;
+  font-size: 1.9rem;
+  line-height: 1.6;
   margin: 2rem 0 3rem;
   text-align: justify;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  margin-left: 30px;
 }
 
+@media (max-width: 1024px) {
+  .about-content {
+    flex-direction: column; 
+  }
+
+  .about-content .heading {
+    font-size: 2.5rem;
+  }
+
+  .about-content .heading span {
+    font-size: 2.5rem; 
+  }
+
+  .about-content p {
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .about-content .heading {
+    font-size: 2rem;
+  }
+
+  .about-content .heading span {
+    font-size: 2rem; 
+  }
+
+  .about-content p {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .about-content .heading {
+    font-size: 1.5rem;
+  }
+
+  .about-content .heading span {
+    font-size: 1.5rem; 
+  }
+
+  .about-content p {
+    font-size: 0.5rem;
+  }
+
+  .overlay {
+    padding: 10px;
+  }
+}
 
 .services h2 {
   margin-bottom: 5rem;
