Changed the font size of text for mobile screens.

--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ html {
 body {
   background-color: var(--bg-color);
   color: var(--txt-color);
+  margin: 0;
+  padding: 0;
 }
 body::-webkit-scrollbar {
   display: none;
@@ -37,6 +39,7 @@ body {
 section {
   min-height: 100vh;
   padding: 10rem 9% 2rem;
+  margin: 0;
 }
 .header {
   position: fixed;
@@ -49,6 +52,7 @@ section {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  margin-bottom: 0;
 }
 .header.sticky {
   border-bottom: 0.1rem solid rgb(252, 187, 223);
@@ -67,9 +71,8 @@ section {
 }
 .navbar a {
   font-size: 1.5vmax;
-
  }
- section
+ /*section
  {
    min-height: 100vh;
    padding: 10rem 9% 2rem;
@@ -88,10 +91,15 @@ section {
    align-items: center;
    z-index: 100;
  }
- .header.sticky
- {
+
+ .header.sticky{
   border-bottom: .1rem solid rgb(252, 187, 223);
- }
+ }*/
+
+ .carousel {
+    margin: 0;
+    padding: 0;
+  }
 
  .logo
  {
@@ -127,7 +135,6 @@ section {
   width: 80px;
   height: auto; /* Use auto to maintain aspect ratio */
   max-width: 100%;
-
   margin-right: 5px; /* Adjust margin as needed */
 }
 
@@ -170,9 +177,10 @@ section {
   width: 100%;
   /* border: 2px solid blue;  */
   padding: 0;
-  margin: 0;
   position: relative;
+  margin-bottom: 0;
 } 
+
 .slider {
   margin: 0;
   min-width: 100%;
@@ -212,17 +220,15 @@ section {
   width: 55%;
   height: 25vmax;
   font-size: 4vmax;
+  margin-bottom: 0;
 }
-
-
-
 
 .home-content h3 {
   font-size: 4.2rem;
   font-weight: 700;
 }
-.home-content h3:nth-of-type(2) {
 
+.home-content h3:nth-of-type(2) {
   margin-right:5px; /* Adjust margin as needed */
 }
 
@@ -384,11 +390,13 @@ span {
 
 .about {
   position: relative;
-  height: 100vh; 
+  min-height: 100vh; 
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  margin:0;
+  padding:0;
 }
 
 /*.about-img img {
@@ -402,12 +410,16 @@ span {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  margin:0;
+  padding: 0;
 }
 
 .video-wrapper video {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  margin:0;
+  padding: 0;
 }
 
 .video-overlay{
@@ -421,8 +433,11 @@ span {
 }
 
 .background-video{
+  width:100%;
+  height:100%;
   filter: contrast(1.5) brightness(1.4);
   z-index:0;
+  object-fit: auto;
 }
 
 .overlay {
@@ -435,7 +450,8 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 2rem;
+  z-index: 2;
 }
 
 .about-content {
@@ -451,8 +467,6 @@ span {
 .about-content .heading {
   text-align: center;
   font-size: 9rem;
-  margin-bottom: 30px;
-  margin-right: 30px;
 }
 
 .about-content .heading span {
@@ -467,9 +481,11 @@ span {
 .about-content h2 {
   text-align: left;
   line-height: 1.2;
+  margin:0;
 }
 .about-content h3 {
   font-size: 2.6rem;
+  margin:0;
 }
 .about-content p {
   font-size: 1.9rem;
@@ -483,53 +499,90 @@ span {
 }
 
 @media (max-width: 1024px) {
+  .home {
+    margin: 0; 
+    padding: 0;
+  }
+  .about{
+    margin:0;
+    padding: 0;
+  }
+
   .about-content {
     flex-direction: column; 
   }
 
   .about-content .heading {
-    font-size: 2.5rem;
+    font-size: 5.5rem;
   }
 
   .about-content .heading span {
-    font-size: 2.5rem; 
+    font-size: 5.5rem; 
   }
 
   .about-content p {
-    font-size: 1.3rem;
+    font-size: 1.9rem;
+    text-align: justify;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 768px) {
+  .home {
+    margin: 0; 
+    padding: 0;
+  }
+  .about{
+    margin:0;
+    padding: 0;
+  }
+
   .about-content .heading {
-    font-size: 2rem;
+    font-size: 4.5rem;
   }
 
   .about-content .heading span {
-    font-size: 2rem; 
+    font-size: 4.5rem; 
   }
 
   .about-content p {
-    font-size: 0.8rem;
+    font-size: 1.9rem;
+    text-align: justify;
+    margin-left: 0; 
   }
 }
 
 @media (max-width: 480px) {
+  .home {
+    margin: 0;
+    padding: 0; 
+  }
+  .about{
+    margin:0;
+    padding: 0;
+  }
+
   .about-content .heading {
-    font-size: 1.5rem;
+    font-size: 3.5rem;
   }
 
   .about-content .heading span {
-    font-size: 1.5rem; 
+    font-size: 3.5rem; 
   }
 
   .about-content p {
-    font-size: 0.5rem;
+    font-size: 1.5rem;
+    text-align: justify;
+    margin-left: 0;
   }
 
   .overlay {
     padding: 10px;
   }
+
+.carousel, .about-section {
+  margin-bottom: 0;
+}
 }
 
 .services h2 {
